--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
             </div>
         </div>
     </div>
+    
+    <!-- Mobile Joystick (Only visible on mobile) -->
+    <div id="mobile-controls" class="mobile-controls">
+        <div class="joystick-container">
+            <div class="joystick-pad">
+                <button class="joystick-btn" id="btn-up" data-key="ArrowUp">↑</button>
+                <button class="joystick-btn" id="btn-left" data-key="ArrowLeft">←</button>
+                <button class="joystick-btn" id="btn-right" data-key="ArrowRight">→</button>
+                <button class="joystick-btn" id="btn-down" data-key="ArrowDown">↓</button>
+            </div>
+        </div>
+        <div class="action-container">
+            <button class="action-btn" id="btn-bomb" data-key="Space">💣</button>
+        </div>
+    </div>
 
     <!-- Game Over Screen -->
     <div id="game-over" class="screen">
